to.etc.domui/src/resources/themes/blue/style.css
/* ... */
.ui-mp-top {
	background: url(bg-caption.png) repeat-x;
	font-weight: bold;
	font-style: italic;
}

.ui-mp-w {
	background-color: #bed6f8;
	font-weight: bold;
	font-style: italic;
}
.ui-mp-top TD {
	width: 1.8em;
}
.ui-mp-d, .ui-mp-xd {
	text-align: right;
}
.ui-mp-xd {
	color: #777777;
}
TD.ui-mp-ch:hover {
	background-color: #ffe1bf !important;
}
.ui-mp-mrk {
	background-color: yellow;
}
/**** Schedule ****/
.ui-wa {
	
}

.ui-wa-hd {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
	font-weight: bold;
	vertical-align: top;
	text-align: center;
	background-color: #eeeeee;
	height: 20px;
}

div.ui-wa-bg {
	position: relative;
	top: 0px;
	left: 0px;
	clear: both;
	z-index: 10;
	width: 100%;
	height: 100%;
	padding: 0;
	margin: 0;
}
div.ui-wa-f {
	z-index: 20;
	background-color: transparent;
}

/* IMPORTANT: this color together with "cellspacing=1" creates the lines between the cells!!!! */
table.ui-wa-bgtbl {
	background-color: #cccccc;
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
}

.ui-wa-gt {
	background-color: #eeeeee;
	text-align: right;
	white-space: nowrap;
}

.ui-wa-hour {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 12pt;
	font-weight: bold;
	vertical-align: top;
}

.ui-wa-min {
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
	font-weight: bold;
	vertical-align: top;
}

.ui-wa-cell {
	background-color: #ffffff;
}

/**** schedule item ****/
.ui-wa-it {
	overflow: hidden;
	border: 1px solid black;
	background-color: #00ffcc;
	font-family: Arial, Verdana, Bitstream Vera, sans-serif;
	font-size: 8pt;
}

.ui-wa-img {
	float: left;
	padding-right: 10px;
}

.ui-wa-ity {
	font-variant: small-caps;
	font-size: 8pt;
}

.ui-wa-nm {
	font-weight: bolder;
}

.ui-wa-dt {
	font-size: 8pt;
}

.ui-wa-tm {
	font-size: 6pt;
	color: blue;
	margin-left: 5px;
}

.ui-wa-nt {
	background-color: #ff4d00;
}

/*** LookupInput thingerydoo ***/
.ui-lui {
	background: #ffffff;
	padding: 0px;
	margin: 0px;
}

table.ui-lui {
	width: 5%;
	white-space: nowrap;
}

.ui-lui-v {
	padding: 0px;
	margin: 0px;
	background-color: #ffffff;
}

/*** LookupForm ***/
.ui-lf-coll {
	border-bottom: 1px dotted #666666;
}

/*** FloatingWindow ***/
.ui-fw {
	padding: 0;
	margin: 0;
	/*	border: 1px solid black; */
	background: url(bg-body.png) repeat-x white;
	border: 1px solid #cccccc;
	border-top: none;
	/*	overflow: hidden;	*/
	top: 5%;
	left: 50%;
}

.ui-fw-ttl {
	position: absolute;
	top: 0px;
	height: 20px;
	left: 0px;
	right: 0px;
/*	width: 100%; */
	padding: 0;
	padding: 2px;
	background: url(bg-float-ttl2.png) repeat-x;
	border-bottom: 1px solid #eeeeee;
	font-size: 15px;
	font-weight: bold;
}

.ui-fw-c {
	width: 100%;
	position: absolute;
	top: 24px;
	bottom: 0px;
/*	height: 100%; */
	padding: 0;
	margin: 0;
	overflow: auto;
}

.ui-fw-hider {
	height: 100%;
	width: 100%;
	opacity: 0.5;
	position: fixed;
	top: 0px;
	left: 0px;
	background-color: black;
}

/** Tree control ***/

.ui-tree {
	height: 100%;
}

/*** SplitPanel (simple version) layout thingy ***/
.ui-sp,.ui-sp-c {
	vertical-align: top;
}

/*** Form basic styles: these are for forms having the label BEFORE the field (horizontal). ***/
.ui-f-lbl {
	text-align: right;
	font-weight: bold;
	font-size: 11px;
	/* FIXME: Abuse, chainsaws: viewpoint uses PIXEL sizing!? */
	vertical-align: top;
}

.ui-f-in {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
}

/*** Form basic styles: for forms having the label ABOVE the field (vertical stacked) ***/
.ui-fvs-lbl {
	font-weight: bold;
	font-size: 11px;
}

.ui-fvs-in {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
}

/*** Typed presentation for fields containing numerics ***/
.ui-numeric {
	text-align: right;
}

/* Display-only field */
.ui-f-display {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
	background: #eff7ff;
}

/*** Form basic styles: for forms where the label is above the edit control (vertical). ***/
.ui-fv-lbl {
	text-align: left;
	font-weight: bold;
	font-size: 11px;
	/* FIXME: Fuck-me-gently with a chainsaw: viewpoint uses PIXEL sizing!? */
	vertical-align: top;
}
.ui-fv-in {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
}
.ui-fv-display {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
	vertical-align: top;
	background: #eff7ff;
}

input {
	font-size: 11px; /* FIXME: viewpoint uses PIXEL sizing!? */
	font-family: verdana, tahoma, helvetica, sans-serif;
}

.ui-ro {
	background: #eff7ff;
}





/*** NiceButton ***/
a.ui-nbtn {
	/* display: inline-table; jal 20080711 This works proper with FF3 et al but of course not with IE7.. IE8 does work though */
	display: inline-block;
	color: white;
	background: url(threebuttons2.png) transparent no-repeat;
	width: 122px;
	height: 25px;
	margin: 3px auto;
	padding: 3px 0 0 0;
	text-align: center;
	font-family: Helvetica, Calibri, Arial, Bitstream Vera Sans, sans-serif;
	font-size: 100%;
	font-weight: bold;
	text-decoration: none;
}

a.ui-nbtn:hover,a.ui-nbtn:active {
	background-position: 0 -34px;
	color: yellow;
}

/*** Image Button ***/
.ui-ib {
	width: 114px;
	height: 22px;
	border: none;
	background: none;
}

.ui-ib:hover {
	background: #cccccc;
}

/*** Old Image button ***/
.ui-ibtn {
	cursor: pointer;
}

/*** MsgBox ***/
.ui-mb {
	background-color: #d4eeff;
	border: 1px solid #777777;
}

.ui-mb-ttl {
	background-color: #9cd9ff;
}

/*** DataTable default style ***/
.ui-dt {
	overflow: auto;
}

.ui-dt TH {
	text-align: left;
}

.ui-dt-nores {
	padding: 10px 0px 10px 0px;
	font-style: italic;
}

.ui-odd {
	
}
/* ... */

